[tool.poetry]
name = "rag-to-riches-code"
version = "0.1.0"
description = ""
authors = ["Albert Schweitzer <schweitzer.albert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
